# onnda

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.claude/skills/design-tweaks/: SKILL.md
.claude/skills/design-tweaks/dev/: explorer.html  settings-page.html
.github/workflows/: ci.yml  release.yml
.planning/: INTEL-SESSION.md  PROJECT.md  REQUIREMENTS.md  RESUME.md  ROADMAP.md  STATE.md  config.json
.planning/archive/v1.0/phase-01/: 01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-05-SUMMARY.md  01-07-PLAN.md  01-08-PLAN.md  01-08-SUMMARY.md  01-09-PLAN.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-UI-SPEC.md
.planning/phases/01-blindaje-de-producci-n/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/01-redise-o-del-panel-de-configuraci-n-estilo-whisprflow/: 01-01-PLAN.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-SUMMARY.md  01-09-SUMMARY.md  01-CONTEXT.md  01-DARK-DESIGN-SYSTEM.md  01-DESIGN-SYSTEM-RESEARCH.md  01-PATTERNS.md  01-SOUND-DESIGN.md  01-UI-SPEC.md
.planning/phases/02-compatibilidad-honesta-intel-apple-silicon/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/05-pulido/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md
.planning/research/: LAUNCH-DIAGNOSIS.md  product-improvements-backlog.md
dev/: label-fonts.html  notch-playground.html  sound-chooser.html  wave-color-configurator.html  wave-playground.html  wave-playground2.html  wave-tabs-configurator.html
docs/superpowers/plans/: 2026-06-13-infrastructure-refactor.md  2026-06-13-progressive-chunking.md  2026-06-16-onnda-ui-redesign.md  2026-06-26-accounts-onboarding.md  2026-06-26-metrics-aptabase.md  2026-06-30-v1.7.3.md
docs/superpowers/specs/: 2026-06-16-onnda-ui-redesign-design.md  2026-06-26-accounts-onboarding-design.md  2026-06-26-metrics-aptabase-design.md  2026-06-30-v1.7.3-design.md
scripts/: build-sidecar.sh  gen-sounds.py  make-dmg.sh  sign-dev.sh
src/: app.html
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/binaries/: asr-aarch64-apple-darwin  asr-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/examples/: bench.rs
src-tauri/icons/: Assets.car  REGEN-ICON.md  icon.icns
src-tauri/icons/AppIcon.icon/: icon.json
src-tauri/sidecar-asr/: Package.swift
src-tauri/sidecar-asr/Sources/asr/: main.swift
src-tauri/src/: accounts.rs  analytics.rs  audio.rs  audio_decode.rs  backend.rs  commands.rs  compat.rs  data_mgmt.rs  escape.rs  history.rs  learn.rs  lib.rs  main.rs  media_pause.rs  models.rs  notch.rs  paste.rs  paths.rs  recording.rs  replacements.rs  settings.rs  shortcut.rs  sounds.rs  speech_backend.rs  streaming.rs  transcription.rs  updater_check.rs  vad.rs  whisper_backend.rs
src/lib/: analytics.ts  auth.svelte.ts  brand.ts  constants.ts  streak.ts  subscribe.ts  types.ts
src/lib/components/: HotkeyRecorder.svelte  ModelCard.svelte  PermissionRow.svelte  Row.svelte  Rows.svelte  Sidebar.svelte  Toggle.svelte
src/lib/components/ui/: Card.svelte  FeedbackBanner.svelte  Icon.svelte  NavItem.svelte  SectionLabel.svelte  Select.svelte  StatCard.svelte  StatNumber.svelte  StreakCard.svelte  Wordmark.svelte
src/lib/sections/: Ajustes.svelte  Auth.svelte  Diccionario.svelte  Home.svelte  Importar.svelte  Transcripciones.svelte
src/lib/stores/: theme.svelte.ts  userName.svelte.ts
src/lib/styles/: tokens.css
src/routes/: +page.svelte
src/routes/widget/: +page.svelte
vercel-subscribe/: README.md  package.json
vercel-subscribe/api/: subscribe.js
