[package]
name = "onnda"
version = "1.7.0"
description = "onnda - transcripción de voz a texto 100% local"
authors = ["you"]
edition = "2021"

[lib]
name = "onnda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"

# Audio capture
cpal = "0.15"

# Voice activity detection
webrtc-vad = "0.4"

# FFT for the spectrum visualizer (audio-bands)
rustfft = "6"

# Whisper transcription — Metal GPU acceleration only on Apple Silicon
whisper-rs = "0.14"

# String similarity (word correction, same crate Aztec Voice uses)
strsim = "0.11"

# Deterministic post-transcription find/replace + voice snippets
regex = "1"

# File transcription: decode arbitrary audio containers (wav/mp3/m4a) to PCM.
symphonia = { version = "0.6", features = ["mp3", "isomp4", "aac", "alac", "wav", "pcm"] }
# Model download integrity (sha256 verify).
sha2 = "0.11"

# Mutex sin envenenamiento (HARDEN-02) y logging rotativo a disco (HARDEN-06).
parking_lot = "0.12"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-aptabase = "1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
whisper-rs = { version = "0.14", features = ["metal"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry", "NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSScreen", "NSWindow", "NSResponder", "NSView", "NSEvent", "NSSound"] }
block2 = "0.6"
window-vibrancy = "0.6"

# Optimize dependencies (whisper.cpp, webrtc-vad, resampling, etc.) to -O3 even
# in dev builds. Our own crate stays unoptimized so it compiles fast, but the
# heavy numeric work (Whisper inference) runs at near-release speed. Without this,
# dev-mode transcription is ~10× slower than the release app.
[profile.dev.package."*"]
opt-level = 3
